samples/_failures_safe/1761180066_537200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_770f52e0.c: In function ‘main’:
./samples/SAFE/__tmp_770f52e0.c:150:16: error: missing terminating " character
  150 |         printf("%02
      |                ^~~~
./samples/SAFE/__tmp_770f52e0.c:150:9: error: expected expression at end of input
  150 |         printf("%02
      |         ^~~~~~
./samples/SAFE/__tmp_770f52e0.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_770f52e0.c:150:9: error: expected declaration or statement at end of input
